--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "robust-arduino-serial"
 version = "0.1.0"
 authors = ["Antonin <antonin.raffin@ensta.org>"]
+description = "Simple and robust serial communication protocol."
+homepage = "https://github.com/araffin/rust-arduino-serial"
+repository = "https://github.com/araffin/rust-arduino-serial"
+# documentation = "https://github.com/araffin/rust-arduino-serial"
+license = "MIT"
+readme = "README.md"
+keywords = ["serial", "hardware", "arduino", "RS232", "communication", "protocol", "raspberry"]
+categories = ["hardware-support", "network-programming", "encoding"]
 
 [dependencies]
 serial = "0.4"
