[ci skip] add doc link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Antonin <antonin.raffin@ensta.org>"]
 description = "Simple and robust serial communication protocol."
 homepage = "https://github.com/araffin/arduino-robust-serial"
 repository = "https://github.com/araffin/rust-arduino-serial"
-# documentation = "https://github.com/araffin/rust-arduino-serial"
+documentation = "https://github.com/araffin/arduino-robust-serial"
 license = "MIT"
 readme = "README.md"
 keywords = ["serial", "hardware", "arduino", "RS232", "communication", "protocol", "raspberry"]
