--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "robust-arduino-serial"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Antonin <antonin.raffin@ensta.org>"]
 description = "Simple and robust serial communication protocol."
 homepage = "https://github.com/araffin/arduino-robust-serial"
 repository = "https://github.com/araffin/rust-arduino-serial"
-documentation = "https://github.com/araffin/arduino-robust-serial"
+documentation = "https://docs.rs/robust-arduino-serial"
 license = "MIT"
 readme = "README.md"
 keywords = ["serial", "hardware", "arduino", "communication", "protocol"]
